@@ -32,6 +32,7 @@ public class ServerConfig
     public bool MetalCastingTweaks { get; set; } = true;
     public float CastToolDurabilityPenalty { get; set; } = 0.1f;
     public bool HammerTweaks { get; set; } = true;
+    public bool RotationRequiresTongs { get; set; } = false;
     public bool AnvilShowRecipeVoxels { get; set; } = true;
     public bool RememberHammerToolMode { get; set; } = true;
     public bool ShowWorkableTemperature { get; set; } = true;
