@@ -24,6 +24,7 @@
   "setting-metalcastingtweaks": "Metal casting tweaks",
   "setting-casttooldurabilitypenalty": "Cast tool durability penalty",
   "setting-hammertweaks": "Hammer tweaks",
+  "setting-rotationrequirestongs": "Rotation requires tongs",
   "setting-anvilshowrecipevoxels": "Show recipe voxel count",
   "setting-rememberhammertooldmode": "Remember hammer tool mode",
   "setting-showworkabletemperature": "Show workable temperature",
