@@ -24,6 +24,7 @@
   "setting-metalcastingtweaks": "Настройки литья металла",
   "setting-casttooldurabilitypenalty": "Снижение прочности литых инструментов",
   "setting-hammertweaks": "Настройки молота",
+  "setting-rotationrequirestongs": "Требуются щипцы для вращения",
   "setting-anvilshowrecipevoxels": "Показать количество вокселей в рецепте",
   "setting-rememberhammertooldmode": "Запомнить режим работы молота",
   "setting-showworkabletemperature": "Показать рабочую температуру",
